Add `accessToken` as `tokenReceivedCallback` param

--- a/JavaScriptSPA/index.html
+++ b/JavaScriptSPA/index.html
@@ -95,7 +95,7 @@
         }); 
     }
 
-    function acquireTokenRedirectCallBack(errorDesc, token, error, tokenType)
+    function acquireTokenRedirectCallBack(errorDesc, accessToken, error, tokenType)
     {
      if(tokenType === "access_token")
      {
